[gd_scene load_steps=4 format=3 uid="uid://cn206hgrtfuh2"]

[ext_resource type="Script" uid="uid://bdyt37433scc" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="FontFile" uid="uid://bkw1sndk0dkgc" path="res://asset/Fonts/PressStart2P-Regular.ttf" id="1_n87rw"]
[ext_resource type="PackedScene" uid="uid://dske11r146lvc" path="res://scenes/options_menu.tscn" id="3_kukqi"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 307.0
offset_top = 166.0
offset_right = -307.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.5019608)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 64
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="OptionButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 32
text = "Option"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 32
text = "Quit to Menu"

[node name="OptionsMenu" parent="." instance=ExtResource("3_kukqi")]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
